changed all to bands

--- a/client/public/index.html
+++ b/client/public/index.html
@@ -17,7 +17,7 @@
 
   <link href="https://fonts.googleapis.com/css?family=Montserrat&display=swap" rel="stylesheet">
 
-  <title>Contact Keeper App</title>
+  <title>Band Keeper App</title>
 </head>
 
 <body>
